--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 		<link href="/assets/default.css" rel="stylesheet" type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600' rel='stylesheet' type='text/css'>
 
+		<!-- DEPENDENCIES -->
 		<script src="/bower_components/threejs/build/three.js"></script>
 		<script src="/bower_components/stats.js/build/stats.min.js"></script>
 		<script src="/bower_components/fetch/fetch.js"></script>
 		<script src="/bower_components/three.map-controls/MapControls.js"></script>
+		<script src="/bower_components/lodash/lodash.min.js"></script>
 		<script src="/lib/transformSVGPath.js"></script>
 	</head>
 	<body>
@@ -29,6 +31,21 @@
 				by <a href="http://hdr.undp.org/en/dataviz-competition">UNDP HDRO</a>.
 			</footer>
 		</div>
+
+		<!-- TEMPLATES -->
+		<script id="tpl-sidebar" type="text/template">
+			{{ _.forEach(indicators, function (title, value) { }}
+				<li>
+					<label>
+						<input type="radio" name="indicators" value="{{- value }}"
+							{{= value === 'none' ? 'checked' : '' }}>
+						{{- title }}
+					</label>
+				</li>
+			{{ }) }}
+		</script>
+
+		<!-- SOURCE -->
 		<script src="src/main.js"></script>
 		<script src="src/sidebar.js"></script>
 	</body>
