--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</script>
 
 		<!-- SOURCE -->
-		<script src="src/sidebar.js"></script>
+		<script src="src/Sidebar.js"></script>
 		<script src="src/main.js"></script>
 	</body>
 </html>
