fully functional indicator toggling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Illustrating World Progress</title>
+		<title>The World in Numbers</title>
 
 		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 		<link href="/assets/default.css" rel="stylesheet" type='text/css'>
@@ -19,7 +19,7 @@
 		<div id="container" class="container"></div>
 		<div id="sidebar" class="sidebar">
 			<header>
-				<h1>Illustrating World Progress</h1>
+				<h1>The World in Numbers</h1>
 				<p class="subtitle">An interactive WebGL visualization.</p>
 			</header>
 			<section>
@@ -27,8 +27,7 @@
 				<ul class="indicators"></ul>
 			</section>
 			<footer>
-				2015. Project by <a href="https://twitter.com/don_mccurdy">Don McCurdy</a>, data
-				by <a href="http://hdr.undp.org/en/dataviz-competition">UNDP HDRO</a>.
+				Don McCurdy, 2015. <p>[TODO: Data Sources]</p>
 			</footer>
 		</div>
 
@@ -38,7 +37,7 @@
 				<li>
 					<label>
 						<input type="radio" name="indicators" value="{{- value }}"
-							{{= value === 'none' ? 'checked' : '' }}>
+							{{= value === 'NONE' ? 'checked' : '' }}>
 						{{- title }}
 					</label>
 				</li>
