Adding controls to sidebar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 			<section>
 				<h2>Indicators</h2>
 				<ul class="indicators"></ul>
+				<h2>Controls</h2>
+				<ul class="controls">
+					<li><span class="control-label">Pan</span>: Click and drag</li>
+					<li><span class="control-label">Rotate</span>: Alt+Click and drag</li>
+					<li><span class="control-label">Zoom</span>: Scroll / Mousewheel</li>
+				</ul>
 			</section>
 			<footer>
 				Don McCurdy, 2015. <p>[TODO: Data Sources]</p>
