adding toggle handle for sidebar. - side note, might be about time for a CSS pre-processor on this

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div id="container" class="container"></div>
-		<div id="sidebar" class="sidebar">
+		<div id="sidebar" class="sidebar open">
 			<header>
 				<h1>The World in Numbers</h1>
 				<p class="subtitle">An interactive WebGL visualization.</p>
@@ -36,6 +36,10 @@
 			<footer>
 				Don McCurdy, 2015. <p>[TODO: Data Sources]</p>
 			</footer>
+			<div class="sidebar-handle">
+				<span class="handle handle-close">&rsaquo;</span>
+				<span class="handle handle-open">&lsaquo;</span>
+			</div>
 		</div>
 
 		<!-- TEMPLATES -->
