responsive scaling + autohide sidebar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 		<link href="/assets/default.css" rel="stylesheet" type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- DEPENDENCIES -->
 		<script src="/bower_components/threejs/build/three.js"></script>
